# pycpp2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  wheels.yml
bloop/: __init__.py
cpp/: ex1.cpp  ex2.cpp  example.cpp  main.cpp
src/: example.cpp
src/bloop/: __init__.py  core.pyi  doubles.py
src/pybmds/: __init__.py
tests/: test_bloop.py
